--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ভাষা মিত্র - Google Gemini</title>
-    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
-    <script type="module" src="./src/index.tsx"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ভাষা মিত্র</title>
+  <!-- Office.js must be loaded before your app -->
+  <script src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
 </head>
 <body>
-    <div id="root"></div>
+  <div id="root"></div>
+  <!-- Vite will inject the correct script during build -->
+  <script type="module" src="/src/index.tsx"></script>
 </body>
 </html>
