--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
   <div id="root"></div>
   <!-- Vite will inject the correct script during build -->
-  <script type="module" src="/src/index.tsx"></script>
+  <script type="module" src="./src/index.tsx"></script>
 </body>
 </html>
